# kairix-mem

./: CLAUDE.md  CONTRIBUTING.md  DESIGN.md  phase-1.csv  pyproject.toml
notes/: auto-trainer-computer-use.md  p1-model-selection.md
sample-apps/todo-api/: .coverage  .gitignore  alembic.ini  conftest.py  pyproject.toml  run_tests.sh
sample-apps/todo-api/alembic/: env.py
sample-apps/todo-api/scripts/: check.sh  create_migration.sh
sample-apps/todo-api/src/todo_api/: config.py
sample-apps/todo-api/src/todo_api/db/: __init__.py  models.py  session.py
sample-apps/todo-api/src/todo_api/models/: reminder.py  tag.py  task.py
sample-apps/todo-api/tests/db/: test_models.py
sample-apps/todo-api/tests/models/: test_reminder.py  test_tag.py  test_task.py
scripts/: new_bug.sh  open_pr.sh  precheck.sh
training-data/: py-auto-guide-computer-use.json
